--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_memberships.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_memberships.scss
@@ -160,6 +160,12 @@
 
       .crm-accordion-body {
         padding: 15px 0 !important;
+
+        & > p {
+          &.description {
+            padding: 0px 20px  15px 20px;
+          }
+        }
       }
     }
   }
@@ -189,6 +195,30 @@
           background: $crm-white;
           border: 1px solid $crm-background !important;
 
+          &.crm-child-row {
+            & > td {
+              padding: 0;
+
+              .crm-ajax-container {
+                table {
+                  margin: 0;
+
+                  tbody {
+                    border-top: 1px solid $crm-dark-grayblue !important
+                  }
+
+                  th {
+                    border-bottom: none;
+                    background: $gray-lighter !important;
+                    color: $gray-darker;
+                    vertical-align: middle;
+                    border: none;
+                  }
+                }
+              }
+            }
+          }
+
           td {
             border: none;
             background: $crm-white;
@@ -205,6 +235,7 @@
 
 
 .CRM_Member_Form_MembershipView {
+
   .action-link {
     display: none;
   }
@@ -216,18 +247,29 @@
     margin: 10px 0;
     box-shadow: none !important;
 
-    thead {
-      th {
-        border-bottom: none;
-        background: $crm-background !important;
-        color: $gray-darker !important;
-        vertical-align: middle;
-        border: none;
-        padding: 10px;
-        line-height: 1.1em;
+    &.crm-info-panel {
+      width: 105%;
+      margin-top: -20px;
+      margin-left: -20px;
+      margin-right: -20px;
+    }
 
-        div {
-          padding: 0;
+    thead {
+      tr {
+        border: 1px solid $crm-background !important;
+
+        th {
+          border-bottom: none;
+          background: $gray-lighter !important;
+          color: $gray-darker !important;
+          vertical-align: middle;
+          border: none;
+          line-height: 1.1em;
+          height: 42px;
+
+          div {
+            padding: 0;
+          }
         }
       }
     }
@@ -236,17 +278,43 @@
       tr {
         background: $crm-white;
         border: 1px solid $crm-background !important;
+        border-right: 0;
+        border-left: 0;
+
+        &.crm-child-row {
+          & > td {
+            padding: 0;
+
+            .crm-ajax-container {
+              table {
+                margin: 0;
+
+                tbody {
+                  border-top: 1px solid $crm-dark-grayblue !important
+                }
+
+                th {
+                  border-bottom: none;
+                  background: $gray-lighter !important;
+                  color: $gray-darker;
+                  vertical-align: middle;
+                  border: none;
+                }
+              }
+            }
+          }
+        }
 
         td {
           border: none;
+          padding: 20px;
+          line-height: 1.1em;
+          background: $crm-white !important;
 
           &.label {
             border-bottom: none;
-            background: $crm-background !important;
             color: $gray-darker !important;
             vertical-align: middle;
-            padding: 10px;
-            line-height: 1.1em;
 
             div {
               padding: 0;
@@ -254,11 +322,16 @@
           }
 
           &:not(.label) {
-            background: $crm-white;
             color: $gray-dark;
-            padding: 10px 30px;
-            line-height: 1.1em;
           }
+        }
+
+        &:last-child {
+          border-bottom: 0;
+        }
+
+        &:first-child {
+          border-top: 0;
         }
       }
     }
@@ -273,6 +346,13 @@
 
     .crm-accordion-body {
       padding: 15px 0 !important;
+
+      & > p {
+        &.description {
+          padding: 0 20px;
+        }
+      }
+
       tr {
 
         td {
@@ -284,5 +364,10 @@
         }
       }
     }
+  }
+
+  #related-contacts-memberships {
+    margin-right: -20px;
+    margin-left: -20px;
   }
 }
