--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_tables.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_tables.scss
@@ -113,6 +113,159 @@
   }
 }
 
+%expandable-table {
+  @extend %civihr-table;
+  background: transparent;
+  border: none;
+  font-family: $font-family-base;
+  width: 100% !important;
+
+  thead {
+    th {
+      border-bottom: none;
+      background-color: $gray-lighter !important;
+      color: $gray-darker !important;
+      vertical-align: middle;
+      border: none;
+      padding: 10px;
+      line-height: 1.1em;
+
+      div {
+        padding: 0;
+      }
+    }
+  }
+
+  .columnheader-dark {
+    border: none;
+    border-bottom: 1px solid #D3DEE2;
+
+    th {
+      border: none !important;
+    }
+  }
+
+  tbody {
+    tr {
+      background: $crm-white;
+
+      td {
+        background: $crm-white !important;
+        border: none !important;
+        color: $gray-dark;
+        padding: 10px 30px;
+        line-height: 1.1em;
+      }
+
+      th {
+        border-bottom: none;
+        background: $crm-background !important;
+        color: $gray-darker !important;
+        vertical-align: middle;
+        border: none;
+        padding: 10px;
+        line-height: 1.1em;
+
+        div {
+          padding: 0;
+        }
+      }
+    }
+  }
+
+  &.selector {
+    tr {
+      &:not(.crm-child-row) {
+        > td {
+          padding: 10px 20px;
+          word-break: break-word;
+          min-width: 80px;
+
+          &:first-child {
+            display: flex;
+            align-items: center;
+          }
+        }
+      }
+    }
+
+    .crm-icon {
+      background: none !important;
+      text-indent: 0 !important;
+
+      &::before {
+        text-indent: 0 !important;
+      }
+
+      &.Individual-icon::before {
+        @include fa-icon(13px, '\f007');
+      }
+
+      &.Household-icon::before {
+        @include fa-icon(13px, '\f015');
+      }
+
+      &.Organization-icon::before {
+        @include fa-icon(13px, '\f1ad');
+      }
+    }
+
+    .crm-expand-row {
+      position: relative;
+      background: none;
+
+      &:after {
+        @include fa-icon(13px, '\f054');
+        position: absolute;
+        left: 0;
+      }
+
+      &.expanded {
+        &:after {
+          @include fa-icon(13px, '\f078');
+        }
+      }
+    }
+
+    th {
+      background-color: $gray-lighter !important;
+    }
+
+    .crm-child-row {
+      &,
+      > td {
+        padding: 0;
+      }
+
+      #info {
+        th {
+          text-transform: capitalize;
+        }
+
+        td,
+        th {
+          padding-left: 20px;
+        }
+
+        td {
+          padding-top: 10px;
+          padding-bottom: 10px;
+        }
+      }
+    }
+
+    .sticky {
+      tr:first-child {
+        border-bottom: 1px solid $crm-dark-grayblue;
+      }
+
+      th:first-child {
+        text-align: center;
+      }
+    }
+  }
+}
+
 .crm-container {
   > table,
   table.report-layout,
