--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_contributions.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_contributions.scss
@@ -1,14 +1,10 @@
-.page-civicrm-contribute-add {
+.page-civicrm-contribute {
   #branding h1.page-title {
     margin-bottom: 20px !important;
   }
 }
 
 .page-civicrm-contribute-search {
-  #branding h1.page-title {
-    margin-bottom: 28px !important;
-  }
-
   .CRM_Contribute_Form_Search {
     .crm-search-tasks {
       background-color: $crm-white;
