AI-25: Adjust summary tab width

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/_detail.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/_detail.scss
@@ -59,6 +59,13 @@
     padding: 0 !important;
   }
 
+  // Summary tab
+  #contact-summary {
+    float: left;
+    padding: 20px !important;
+    width: calc(85% - 40px);
+  }
+
   // Contributions tab
   .CRM_Contribute_Form_Search {
     padding-right: 10px;
