--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/_detail.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/_detail.scss
@@ -60,10 +60,10 @@
   }
 
   // Summary tab
-  #contact-summary {
-    float: left;
+  &#contact-summary {
+    float: left !important;
     padding: 20px !important;
-    width: calc(85% - 40px);
+    width: calc(85% - 40px) !important;
   }
 
   // Contributions tab
