AI-25: Adjust header elements

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/_detail.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/_detail.scss
@@ -180,7 +180,7 @@
 
   #crm-contactname-content {
     border: none !important;
-    max-height: 60px;
+    max-height: 70px;
 
     .crm-summary-display_name {
       padding: 22px 0; // centering name vertically
@@ -213,6 +213,7 @@
     .crm-inline-edit-form {
       background-color: transparent !important;
       padding: 0;
+      padding-left: 10px;
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
@@ -240,7 +241,7 @@
       }
 
       .crm-inline-button {
-        padding: 20px 5px;
+        padding: 27px 5px;
         margin: 0 !important;
         border: 0;
         order: 2;
@@ -479,6 +480,7 @@ input[type="text"] {
   height: 30px;
   line-height: 30px;
   box-sizing: border-box;
+  margin-top: 8px;
 }
 
 .select2-arrow {
