--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_manage-groups.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_manage-groups.scss
@@ -89,12 +89,14 @@
 
   .ui-dialog {
     .help {
+      padding: 10px 0;
       border-radius: 0;
     }
 
     .CRM_Group_Form_Edit {
+
       .crm-form-block {
-        padding: 20px 20px 0 20px;
+        padding: 0 13px;
 
         table {
           tr {
@@ -124,11 +126,19 @@
         .crm-form-textarea {
           min-height: 70px;
         }
-      }
-    }
 
-    .ui-dialog-buttonpane {
-      display: none;
+        div,
+        span {
+          &.description {
+            display: block;
+            line-height: 1.5em;
+          }
+        }
+
+        textarea {
+          line-height: 1.5em;
+        }
+      }
     }
   }
 
@@ -180,10 +190,6 @@
 
   .CRM_Group_Form_Edit {
     .crm-group-form-block {
-      padding: 20px;
-      box-shadow: none;
-      border: 1px solid $crm-dialog-container-border;
-      border-radius: 2px;
 
       .label,
       .report-label {
@@ -227,6 +233,22 @@
     h1 {
       &.page-title {
         margin-bottom: 25px !important;
+      }
+    }
+  }
+}
+
+.page-civicrm-group-add {
+  .CRM_Group_Form_Edit {
+    .crm-group-form-block {
+      padding: 15px;
+
+      .help {
+        padding: 5px;
+      }
+
+      textarea {
+        line-height: 1.5em;
       }
     }
   }
