--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_tables.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_tables.scss
@@ -174,6 +174,16 @@
   }
 
   &.selector {
+    &.row-highlight {
+      tbody {
+        > tr {
+          &:hover {
+            background: $crm-white !important;
+          }
+        }
+      }
+    }
+
     tr {
       &:not(.crm-child-row) {
         > td {
