--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_contributions.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_contributions.scss
@@ -509,6 +509,10 @@
         border: 0;
         border-top: 1px solid $gray-lighter;
         margin-top: 20px;
+
+        &.chart td {
+          border: 0;
+        }
       }
     }
   }
