AI-35: Uses color variable

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_tables.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_tables.scss
@@ -138,7 +138,7 @@
 
   .columnheader-dark {
     border: none;
-    border-bottom: 1px solid #D3DEE2;
+    border-bottom: 1px solid $crm-dark-grayblue;
 
     th {
       border: none !important;
