AI-43: Fix select overflow issue

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_memberships.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_memberships.scss
@@ -108,7 +108,8 @@
     width: 230px;
   }
 
-  select {
+  select,
+  #from_email_address {
     max-width: 230px;
     padding-right: 30px !important;
   }
