--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_tag-contacts.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_tag-contacts.scss
@@ -127,12 +127,14 @@
     box-shadow: $box-shadow;
 
     h3 {
-      border-bottom: none;
-      background: $crm-background;
+      background: $gray-lighter;
       color: $gray-darker;
+      font-size: $font-size-h2;
+      font-family: $font-family-base;
       vertical-align: middle;
       border: none;
-      padding: 15px 20px;
+      padding: 17px 20px;
+      border-bottom: 1px solid $crm-dark-grayblue;
     }
 
     #tagtree {
