AI-35: Use mixin instead of @extend

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_tables.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_tables.scss
@@ -113,7 +113,7 @@
   }
 }
 
-%expandable-table {
+@mixin mx-expandable-table {
   @extend %civihr-table;
   background: transparent;
   border: none;
