AI-19: Adjust select2 icon position

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_forms.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_forms.scss
@@ -56,6 +56,10 @@ $control-height: 30px;
         left: -$control-spacing;
       }
     }
+
+    .select2-search:before {
+      top: 17px !important;
+    }
   }
 
   table {
