AI-21: Adjust label alignment

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/advanced-search/pages/_labels.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/advanced-search/pages/_labels.scss
@@ -586,3 +586,13 @@ input[type='checkbox'] + label {
     }
   }
 }
+
+#contributeForm {
+  tr {
+    &:nth-child(6) {
+      tr > td:first-child {
+        vertical-align: middle;
+      }
+    }
+  }
+}
