AI-31: Adjust add activity styling

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_new-activity.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_new-activity.scss
@@ -171,7 +171,7 @@
   }
 
   .crm-form-block {
-    padding: 15px;
+    padding: 20px;
   }
 
   .crm-option-edit-link {
@@ -194,6 +194,29 @@
   .required {
     &:after {
       display: none;
+    }
+  }
+
+  .crm-accordion-header {
+    margin-left: -20px;
+    margin-right: -20px;
+
+    + .crm-accordion-body {
+      padding: 0 !important;
+
+      td:first-child {
+        padding-left: 0;
+      }
+    }
+  }
+
+  .crm-form-block > .crm-submit-buttons {
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+    min-height: auto !important;
+
+    .crm-button_qf_Activity_upload {
+      margin-left: 0;
     }
   }
 }
