AI-31: Adjust add group styling

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_smart-group.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_smart-group.scss
@@ -11,4 +11,21 @@
     position: relative;
     right: 15px;
   }
+
+  .label {
+    text-align: left !important;
+  }
+
+  .crm-contact-task-createsmartgroup-form-block-description {
+    .label {
+      vertical-align: top;
+      display: table-cell;
+      text-align: left;
+    }
+
+    textarea {
+      width: 300px;
+      min-height: 100px;
+    }
+  }
 }
