--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_add-to-group.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_add-to-group.scss
@@ -23,4 +23,17 @@
       display: flex;
     }
   }
+
+  .crm-contact-task-addtogroup-form-block-description {
+    .label {
+      vertical-align: top;
+      display: table-cell;
+      text-align: left;
+    }
+
+    textarea {
+      width: 300px;
+      min-height: 100px;
+    }
+  }
 }
